Revision history for Template-Plugin-Digest-SHA3
================================================

0.01    2014-09-04
        - First release