@@ -8,6 +8,7 @@ META.yml
 README
 t/00use.t
 t/01filter.t
+t/02filter.t
 t/90podtest.t
 t/91podcover.t
 t/94metatest.t
