@@ -1,5 +1,8 @@
 Revision history for Template-Plugin-Digest-SHA3
 ================================================
 
+        - algorithms have changed in Digest-SHA3-0.24, such that strings are 
+          different from previous versions.
+
 0.01    2014-09-04
         - First release
